# python-project-50

./: .gitignore  Makefile  README.md  gendiff-demo.cast  pyproject.toml  ruff.toml  setup.py  sonar-project.properties
.github/workflows/: pyci.yml  python-ci.yml
gendiff/: __init__.py  ast_builder.py  engine.py  file_loader.py  generate_diff.py  parsers.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: debug_test.py  test_file_loader.py  test_gendiff.py  test_parsers.py  test_recursive.py
tests/fixtures/: expected_json.txt  file1_recursive.json  file2_recursive.json
